log
Thu 28 Mar 2024 02:47:14 PM UTC: 
 list.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bcf071f
Thu 28 Mar 2024 02:48:15 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f1b977d
Thu 28 Mar 2024 02:49:32 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  9|3
total_score: 35/70
7471164
Sat 30 Mar 2024 06:59:32 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
74bea5c
Sat 30 Mar 2024 07:02:12 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
b721aae
Sat 30 Mar 2024 07:09:18 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  10|2
total_score: 45/70
0e90ab1
Sat 30 Mar 2024 07:21:36 PM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  11|1
total_score: 55/70
703b7ec
Sat 30 Mar 2024 07:51:41 PM UTC: 
 list.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  12|0
total_score: 70/70
9d20b76
Sat 30 Mar 2024 07:52:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:159:5: error: expected ‘;’ before ‘return’
  159 |     return data;
      |     ^~~~~~
list.c:156:12: error: unused variable ‘data’ [-Werror=unused-variable]
  156 |     void * data = list->current->data;
      |            ^~~~
list.c:160:1: error: control reaches end of non-void function [-Werror=return-type]
  160 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ce7c541
